src/test/deca/context/valid/ContextAvecObjet/DeclFields/sameFieldsclassAextendsB.deca
// Description:
//    Déclaration de champs de même nom entre une classe mère et une classe fille
//
// Resultats:
//    ok

class A {
    protected int x;
}

class B extends A{
    protected int x;
}